# Proj3

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PROJ3.sln  VERSION.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _PROJ3.vcxproj  _PROJ3.vcxproj.filters  cmake_install.cmake  setup.py
Debug/: PROJ3.exp  PROJ3.lib  _PROJ3.exp  _PROJ3.lib
_PROJ3.dir/Debug/: _PROJ3.cp312-win_amd64.pyd.recipe
_PROJ3.dir/Debug/_PROJ3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.write.1.tlog
src/: main.cpp
src/PROJ3/: __init__.py  main.cpp
src/scikit_build_example/: __init__.py
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
